@@ -15,6 +15,7 @@ import org.bukkit.entity.Player;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class CountAllEntitiesCMD implements CommandExecutor {
     private final World16Essentials plugin;
@@ -29,7 +30,7 @@ public class CountAllEntitiesCMD implements CommandExecutor {
             if (!sender.hasPermission("world16.countallentities")) return null;
 
             if (args.length == 1) {
-                return TabUtils.getContainsString(args[0], Arrays.stream(EntityType.values()).map(EntityType::name).toList());
+                return TabUtils.getContainsString(args[0], Arrays.stream(EntityType.values()).map(EntityType::name).collect(Collectors.toList()));
             }
             return null;
         });
